tests/invalid/undefined_parameter_simple_rate.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "UndefinedParamSimpleRate",
    "description": "Undefined parameter in simple rate expression"
  },
  "reaction_systems": {
    "ChemSystem": {
      "species": {
        "NO2": {
          "units": "mol/mol",
          "default": 1e-09
        }
      },
      "parameters": {
        "jNO2": {
          "units": "1/s",
          "default": 0.005
        }
      },
      "reactions": [
        {
          "id": "photolysis",
          "substrates": [
            {
              "species": "NO2",
              "stoichiometry": 1
            }
          ],
          "products": null,
          "rate": "undefined_photolysis_rate"
        }
      ]
    }
  }
}
